# opentelemetry-instrumentation-amgi

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  pyproject.toml  tox.ini
.github/workflows/: publish.yml  test.yml
example/: README.md  docker-compose.yml  main.py  otel-collector.yaml  pyproject.toml
