[project]
name = "opentelemetry-instrumentation-amgi"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = []

[dependency-groups]
dev = [
  "commitizen>=4.13.9",
  "coverage>=7.13.4",
  "mypy>=1.19.1",
  "pre-commit-uv>=4.2.1",
  "tox>=4.47.3",
  "tox-uv>=1.33.1",
]

[tool.uv]
workspace.members = [
  "packages/*",
]

[tool.pytest]
ini_options.asyncio_mode = "auto"

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
warn_unused_configs = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
strict_bytes = true
extra_checks = true
allow_untyped_decorators = true
mypy_path = [
  "packages/opentelemetry-instrumentation-amgi-sqs-event-source-mapping/src",
  "packages/opentelemetry-instrumentation-asyncfast/src",
]
