[project]
name = "example"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "amgi-aiokafka>=0.38.0",
  "asyncfast>=0.38.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.39.1",
]
